[package]
name = "texture-cache-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maketiled"
path = "src/maketiled.rs"

[lib]
crate-type = ["lib"]

[dependencies]
bytemuck = "1.24.0"
seize = "0.5.1"

[dev-dependencies]
criterion = "0.8.0"
image = "0.25.9"
tempfile = "3.23.0"
rayon = "1.11.0"

[[bench]]
name = "benchmark"
harness = false
